[gd_scene load_steps=4 format=3 uid="uid://b88q4mwphj2gw"]

[ext_resource type="Script" uid="uid://yi0y1tm67og6" path="res://scripts/core/game_manager.gd" id="1_r0du0"]
[ext_resource type="Script" uid="uid://bpacv4773vcaa" path="res://scripts/boids/boid_system.gd" id="2_cm0pq"]
[ext_resource type="Script" uid="uid://d1fbok7d4hsfn" path="res://scripts/renderer/fish_renderer.gd" id="3_fos0i"]

[node name="GameManager" type="Node"]
script = ExtResource("1_r0du0")
GM_fish_count_IN = 50
GM_debug_enabled_SH = true
GM_draw_spines_SH = true

[node name="FishBoidSim" type="Node" parent="."]
script = ExtResource("2_cm0pq")
FB_tank_size_IN = Vector3(1280, 720, 720)

[node name="FishRenderer" type="Node2D" parent="."]
script = ExtResource("3_fos0i")
